--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ Thumbs.db
 # dotenv environment variables file
 .env
 .env.test
+
+# Cordova/Ionic
+/platforms/
+/node_modules/
+/www/
+/android/
+/ios/
